added site features

--- a/stream.html
+++ b/stream.html
@@ -12,7 +12,6 @@
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.css">
@@ -25,15 +24,16 @@
 
   <!-- Custom styles for this template -->
   <link href="css/new-age.min.css" rel="stylesheet">
-
+<link rel="stylesheet" type="text/css" href="css/custom.css">
 </head>
 
 <body id="page-top">
-
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">
+      <img src="img\banner.JPG">
+    </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -41,13 +41,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#download">Download</a>
+            <a class="nav-link js-scroll-trigger" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#features">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="stream.html">Stream</a>
           </li>
         </ul>
       </div>
@@ -55,26 +52,34 @@
   </nav>
 
   <header class="masthead">
-    <div class="container h-100">
-      <div class="row h-100">
-        <div class="col-lg-7 my-auto">
+    <div class="container h-800">
+      <div class="row h-800">
+        <div class="col-lg-12 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">Thank you for visiting!</h1>
-            <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Watch the Stream Here</a>
+              <div class="row">
+                <div class="col text-center">
+            <h1 class="text-center">Woah! Slow down there.<br>This link will go live 9/9/2020 around 12 noon.</h1>
+<!--            <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Watch the Stream Here</a> -->
+            <a href="index.html" class="btn btn-outline btn-xl js-scroll-trigger">Back to Home Page</a>
           </div>
         </div>
-        <div class="col-lg-5 my-auto">
-          <div class="device-container">
-            <div class="device-mockup iphone6_plus portrait white">
-              <div class="device">
-                <div class="screen">
-                  <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                  <img src="img/demo-screen-1.jpg" class="img-fluid" alt="">
-                </div>
-                <div class="button">
-                  <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-                </div>
-              </div>
+      </div>
+        </div>
+<div class="col-lg-3 mx-auto" style="width: 300px">
+        <div class="row">
+          <div class="text-center">
+            <img src="img\selfie4.jpg" class="img-thumbnail">
+          </div>
+          <div class="column">
+            <img src="img\selfie3.jpg" class="img-thumbnail">
+          </div>
+          <div class="column">
+            <img src="img\selfie2.jpg" class="img-thumbnail">
+          </div>
+          <div class="column">
+            <img src="img\selfie1.jpg" class="img-thumbnail">
+          </div>
+        </div>
             </div>
           </div>
         </div>
@@ -83,15 +88,6 @@
   </header>
 
 
-  <section class="cta">
-    <div class="cta-content">
-      <div class="container">
-        <h2>Thank you for visiting!</h2>
-        <a href=http://bit.ly/abxyz99 class="btn btn-outline btn-xl js-scroll-trigger">Watch the Stream Here</a>
-      </div>
-    </div>
-    <div class="overlay"></div>
-  </section>
 
   <footer>
     <div class="container">
