--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
   <section class="cta">
-    <div class="cta-content">
+    <div class="cta-content col-lg-3 mx-auto">
       <div class="container">
         <h2>Thank you for visiting!</h2>
         <a href='stream.html' class="btn btn-outline btn-xl js-scroll-trigger">Watch the Stream Here</a>
