--- a/index.html
+++ b/index.html
@@ -54,11 +54,14 @@
 
 
   <section class="cta">
-    <div class="cta-content col-lg-3 mx-auto">
-      <div class="container">
+    <div class="cta-content">
+      <div class="column">
+      <div class="text-center">
+
         <h2>Thank you for visiting!</h2>
         <a href='stream.html' class="btn btn-outline btn-xl js-scroll-trigger">Watch the Stream Here</a>
       </div>
+    </div>
     </div>
     <div class="overlay"></div>
   </section>
