added stream link active

--- a/stream.html
+++ b/stream.html
@@ -58,10 +58,10 @@
           <div class="header-content mx-auto">
               <div class="row">
                 <div class="col text-center">
-            <h1 class="text-center">Woah! Slow down there.<br>This zoom link will go live 9/9/2020 around 12 noon.</h1>
+<!--            <h1 class="text-center">Woah! Slow down there.<br>This zoom link will go live 9/9/2020 around 12 noon.</h1> -->
               <a href="https://zoom.us/download" class="btn btn-outline btn-xl js-scroll-trigger" target="_blank">Download Zoom Here</a>
-<!--           <a href="https://udel.zoom.us/j/93848183310" class="btn btn-outline btn-xl js-scroll-trigger" target="_blank">Watch the Stream Here</a>
-            <h1 class="text-center">Passcode 443476</h1> -->
+           <a href="https://udel.zoom.us/j/93848183310" class="btn btn-outline btn-xl js-scroll-trigger" target="_blank">Watch the Stream Here</a>
+            <h2 class="text-center">Passcode to enter Zoom meeting: 443476</h2>
             <a href="index.html" class="btn btn-outline btn-xl js-scroll-trigger">Back to Home Page</a>
           </div>
         </div>
